--- a/apps/web/containers/SideNavBar/index.module.scss
+++ b/apps/web/containers/SideNavBar/index.module.scss
@@ -49,7 +49,7 @@
   z-index: 100;
 
   > ul {
-    width: 50%;
+    width: 40%;
     height: 100%;
     padding: 10px 15px;
 
@@ -57,8 +57,15 @@
     gap: 15px;
     background-color: var(--color-white);
 
+    box-shadow: 10px 0 10px -5px rgba(85, 85, 85, 0.1);
+
     li {
       width: 100%;
+
+      .menuTitle {
+        font-size: 1rem;
+        margin-bottom: 2px;
+      }
     }
   }
 }
