--- a/apps/web/containers/SideNavBar/index.module.scss
+++ b/apps/web/containers/SideNavBar/index.module.scss
@@ -63,7 +63,7 @@
       width: 100%;
 
       .menuTitle {
-        font-size: 1rem;
+        font-size: var(--font-size-m);
         margin-bottom: 2px;
       }
     }
