--- a/apps/web/containers/Footer/index.module.scss
+++ b/apps/web/containers/Footer/index.module.scss
@@ -26,13 +26,13 @@ $icon-size: 1rem;
       gap: 10px;
 
       .gitHubIcon {
-        @include m.btnStyles($icon-size, $icon-size, '/svgs/gitHub.svg');
+        @include m.iconStyles($icon-size, $icon-size, '/svgs/gitHub.svg');
       }
       .rssIcon {
-        @include m.btnStyles($icon-size, $icon-size, '/svgs/rss.svg');
+        @include m.iconStyles($icon-size, $icon-size, '/svgs/rss.svg');
       }
       .instagramIcon {
-        @include m.btnStyles($icon-size, $icon-size, '/svgs/instagram.svg');
+        @include m.iconStyles($icon-size, $icon-size, '/svgs/instagram.svg');
       }
     }
 
