--- a/apps/web/styles/_globals.scss
+++ b/apps/web/styles/_globals.scss
@@ -5,7 +5,6 @@
 .mediaquery_wrap {
   max-width: var(--max-width);
   min-width: var(--min-width);
-  min-height: 640px;
   background-color: var(--color-white);
   margin: auto;
 
@@ -18,4 +17,9 @@
 
 .back_shadow {
   box-shadow: 0 4px 8px rgba(85, 85, 85, 0.1);
+}
+
+.legalText {
+  white-space: pre-line;
+  font-size: 0.9rem;
 }
