--- a/apps/web/containers/Header/index.module.scss
+++ b/apps/web/containers/Header/index.module.scss
@@ -8,11 +8,10 @@ $title-width: 80px;
   padding: 10px 15px;
   background-color: var(--color-white);
 
-  .title {
+  .titleBtn {
     width: $title-width;
-    text-align: center;
     position: absolute;
-    top: 10px;
+    top: 20px;
     left: calc(50% - $title-width / 2);
   }
 
