--- a/apps/web/styles/variable.css
+++ b/apps/web/styles/variable.css
@@ -40,6 +40,7 @@
   --max-width: 430px;
   --min-width: 320px;
 
+  --border-radius-xs: 0.3rem;
   --border-radius-s: 0.4rem;
   --border-radius-m: 0.7rem;
   --border-radius-l: 1rem;
