--- a/apps/web/styles/mixins/_index.scss
+++ b/apps/web/styles/mixins/_index.scss
@@ -16,3 +16,8 @@
   background-size: contain;
   background-image: url($background-image);
 }
+
+@mixin borderStyles($border_size: 2px, $radius_size: --border-radius-s) {
+  border: $border_size solid var(--border-color);
+  border-radius: var($radius_size);
+}
