--- a/apps/web/containers/Register/index.module.scss
+++ b/apps/web/containers/Register/index.module.scss
@@ -6,10 +6,8 @@
 
   input {
     padding: 5px;
-    border: 2px solid var(--border-color);
-    border-radius: var(--border-radius-xs);
+    @include m.borderStyles($radius_size: --border-radius-xs);
   }
-
   label {
     @include m.flexbox(start, between);
     gap: 10px;
