--- a/apps/web/components/Buttons/index.module.scss
+++ b/apps/web/components/Buttons/index.module.scss
@@ -1,24 +1,61 @@
 @use 'styles/mixins' as m;
 
-.button {
-  width: 100%;
-  padding: 5px;
-  font-size: var(--font-size-m);
-  border: 2px solid var(--border-color);
-  border-radius: var(--border-radius-s);
+@media (min-width: 391px) {
+  .float {
+    right: calc(50% - 185px);
+  }
+}
+@media (max-width: 390px) {
+  .float {
+    right: 25px;
+  }
+}
+
+.buttonWrap {
+  background-color: var(--color-primary);
 
   p {
-    padding: 10px;
+    padding: 5px;
+
     font-weight: var(--font-weight-bold);
-    border-radius: var(--border-radius-s);
     transition: border-color 0.3s ease;
+    border-radius: var(--border-radius-s);
     border: 1.5px dashed transparent;
   }
 
   &:hover {
     p {
       border-color: var(--border-color);
-      transition: border-color 0.3s ease;
     }
   }
+}
+
+.small {
+  width: 20%;
+  padding: 3px;
+  font-size: var(--font-size-s);
+}
+.medium {
+  width: 40%;
+  padding: 4px;
+  font-size: var(--font-size-m);
+}
+.large {
+  width: 100%;
+  padding: 5px;
+  font-size: var(--font-size-m);
+}
+
+.base {
+  @include m.borderStyles();
+}
+
+.float {
+  width: 100px;
+  padding: 5px;
+
+  position: fixed;
+  bottom: 30px;
+
+  @include m.borderStyles();
 }
