feat: add image Item - 기존 imageItem을 imageLinkItem으로 변경 - imageItem : 이미지 전용으로 생성

--- a/apps/web/styles/mixins/_index.scss
+++ b/apps/web/styles/mixins/_index.scss
@@ -1,5 +1,7 @@
 @forward 'flexbox';
 
+@use 'styles/mixins/flexbox' as fb;
+
 @mixin textEllipsis($width: 100%) {
   width: $width;
   overflow: hidden;
@@ -20,4 +22,20 @@
 @mixin borderStyles($border_size: 2px, $radius_size: --border-radius-s) {
   border: $border_size solid var(--border-color);
   border-radius: var($radius_size);
+}
+
+@mixin imageWrap($width, $height) {
+  width: $width;
+  height: $height;
+
+  position: relative;
+  overflow: hidden;
+
+  @include fb.flexboxColumn();
+  margin-bottom: 5px;
+
+  .image {
+    object-fit: cover;
+    object-position: center;
+  }
 }
