--- a/apps/web/components/Buttons/index.module.scss
+++ b/apps/web/components/Buttons/index.module.scss
@@ -1,13 +1,20 @@
 @use 'styles/mixins' as m;
 
 @media (min-width: 391px) {
-  .float {
+  .right {
     right: calc(50% - 185px);
+  }
+  .left {
+    left: calc(50% - 185px);
   }
 }
 @media (max-width: 390px) {
-  .float {
+  .right {
     right: 25px;
+  }
+
+  .left {
+    left: 25px;
   }
 }
 
@@ -55,6 +62,8 @@
 
   position: fixed;
   bottom: 30px;
+
+  z-index: 100;
 
   @include m.borderStyles();
 }
