--- a/apps/web/containers/layout/Header/index.module.scss
+++ b/apps/web/containers/layout/Header/index.module.scss
@@ -1,18 +1,23 @@
 @use 'styles/mixins' as m;
 
-$button-size: 1.4rem;
-$title-width: 80px;
+$button-size: 1.2rem;
+$title-width: 220px;
 
 .wrap {
   width: 100%;
+  height: 45px;
   padding: 10px 15px;
-  background-color: var(--color-white);
+  background-color: var(--color-bg-primary);
 
   .titleBtn {
     width: $title-width;
     position: absolute;
-    top: 20px;
+    top: 15px;
     left: calc(50% - $title-width / 2);
+
+    h1 {
+      font-size: 0;
+    }
   }
 
   .headerBox {
