style : header layout

--- a/apps/web/components/Buttons/index.module.scss
+++ b/apps/web/components/Buttons/index.module.scss
@@ -19,7 +19,7 @@
 }
 
 .buttonWrap {
-  background-color: var(--color-bg-primary);
+  background-color: var(--color-bg-pink);
 
   p {
     padding: 5px;
@@ -44,7 +44,7 @@
 .medium {
   width: 40%;
   padding: 3px;
-  font-size: var(--font-size-s);
+  font-size: 0.9rem;
 }
 .large {
   width: 100%;
