--- a/apps/web/styles/variable.css
+++ b/apps/web/styles/variable.css
@@ -22,7 +22,7 @@
   --color-bg-yellow: #ffda9a;
 
 
-  --color-primary: #f3ebd9;
+  --color-primary: #eec7a6;
   --color-subPoint: #ffc690;
 
   --font-color: #5e3b28;
