--- a/apps/web/styles/variable.css
+++ b/apps/web/styles/variable.css
@@ -20,7 +20,7 @@
   --color-bg-primary: #f3e6d9;
   --color-bg-pink: #fbd8c6;
   --color-bg-yellow: #ffda9a;
-
+  --color-bg-blue: #6f96da;
 
   --color-primary: #eec7a6;
   --color-subPoint: #ffc690;
