--- a/apps/web/containers/ContentContainers/Preview/index.module.scss
+++ b/apps/web/containers/ContentContainers/Preview/index.module.scss
@@ -1,11 +1,27 @@
 @use 'styles/mixins' as m;
 
 .wrap {
-  @include m.flexboxColumn(_,_);
+  width: 100%;
+  @include m.flexboxColumn();
   gap: 20px;
 
   .contentWrap {
+    width: 100%;
     @include m.flexboxColumn();
-    gap: 10px;
+    gap: 20px;
+
+    h3 {
+      text-align: center;
+      @include m.textEllipsis();
+    }
+    .contentText {
+      @include m.textEllipsis();
+      padding: 0 10px;
+      text-align: center;
+      white-space: pre-wrap;
+    }
+  }
+  .commentWrap {
+    width: 100%;
   }
 }
