--- a/apps/web/containers/Mypage/index.module.scss
+++ b/apps/web/containers/Mypage/index.module.scss
@@ -1,18 +1,33 @@
 @use 'styles/mixins' as m;
 
 .wrap {
+  width: 100%;
+  @include m.flexboxColumn(_, _);
+  gap: 30px;
+
   .userWrap {
     width: 80%;
-    padding: 10px;
+    padding: 8px 10px;
+    margin: auto;
 
     @include m.flexbox(between);
     @include m.borderStyles();
 
+    img {
+      border-radius: var(--border-radius-s);
+    }
+
     .userInfo {
-      width: 80%;
+      width: 73%;
+      @include m.flexboxColumn(between, _);
+      gap: 5px;
 
       .user {
         @include m.flexbox(between);
+
+        .userName {
+          font-size: var(--font-size-m);
+        }
 
         .roleTag {
           font-size: var(--font-size-xs);
@@ -22,12 +37,6 @@
       }
     }
   }
-
-  .createBtn {
-    padding: 3px 5px;
-    @include m.borderStyles();
-  }
-
   .resultWrap {
     width: 100%;
     @include m.flexboxColumn(_, _);
