--- a/apps/web/styles/_globals.scss
+++ b/apps/web/styles/_globals.scss
@@ -11,9 +11,8 @@
   position: relative;
 
   .content_wrap {
-    padding: 10px;
-    min-height: 640px;
-    margin: 60px 0 50px;
+    padding: 120px 10px 50px;
+    min-height: 540px;
   }
 }
 
