refactor : Header 상위 탑 고정으로 변경 - 일정 범위 아래로 내려가면 로고 및 헤더 높이 축소

--- a/apps/web/containers/layout/SideNavBar/index.module.scss
+++ b/apps/web/containers/layout/SideNavBar/index.module.scss
@@ -42,11 +42,10 @@
   max-width: var(--max-width);
   min-width: var(--min-width);
   width: 100%;
-  position: absolute;
+  position: fixed;
   height: 100%;
   top: 0;
-  left: 0;
-  z-index: 120;
+  z-index: 130;
 
   background-color: rgba(88, 88, 88, 0.357);
 
@@ -54,12 +53,12 @@
     width: 45%;
     height: 100%;
     padding: 10px 15px;
+    position: relative;
 
     @include m.flexboxColumn(start);
     gap: 20px;
 
     background-color: var(--color-white);
-
     box-shadow: 10px 0 10px -5px rgba(85, 85, 85, 0.1);
 
     li {
@@ -81,21 +80,22 @@
       .menuTitle {
         font-size: var(--font-size-m);
       }
+    }
+  }
+  .logoutBtn {
+    width: 50%;
+    height: 30px;
 
-      .logoutBtn {
-        width: 50%;
-        height: 30px;
+    position: absolute;
+    bottom: 30px;
 
-        margin-top: 80px;
-        @include m.flexbox(around);
-        @include m.borderStyles(1.5px);
+    @include m.flexbox(around);
+    @include m.borderStyles(1.5px);
 
-        color: var(--font-color);
+    color: var(--font-color);
 
-        .logoutIcon {
-          @include m.iconStyles(1rem, 1rem, '/svgs/logout.svg');
-        }
-      }
+    .logoutIcon {
+      @include m.iconStyles(1rem, 1rem, '/svgs/logout.svg');
     }
   }
 }
