--- a/apps/web/containers/layout/Header/index.module.scss
+++ b/apps/web/containers/layout/Header/index.module.scss
@@ -1,31 +1,48 @@
 @use 'styles/mixins' as m;
 
 $button-size: 1.2rem;
-$title-width: 220px;
 
 .wrap {
+  max-width: var(--max-width);
+  min-width: var(--min-width);
   width: 100%;
-  height: 45px;
-  padding: 10px 15px;
-  background-color: var(--color-bg-pink);
+  height: 120px;
 
-  .titleBtn {
-    width: $title-width;
-    position: absolute;
-    top: 15px;
-    left: calc(50% - $title-width / 2);
+  background: linear-gradient(to bottom, var(--color-bg-pink) 50%, transparent);
+  transition: height 0.5s ease;
 
-    h1 {
-      font-size: 0;
-    }
+  position: fixed;
+  top: 0;
+  z-index: 100;
+
+  h1 {
+    font-size: 0;
   }
 
   .headerBox {
-    @include m.flexbox(between);
+    @include m.flexbox(between, start);
+    padding: 17px;
+
+    .logo {
+      .imageWrap {
+        margin-top: -5px;
+        position: relative;
+        transition: all 0.5s ease;
+      }
+
+      .scrollupLogo {
+        width: 220px;
+        height: 100px;
+      }
+      .scrollDownLogo {
+        width: 150px;
+        height: 60px;
+      }
+    }
 
     .btnBox {
+      width: 55px;
       @include m.flexbox(between);
-      gap: 20px;
     }
     .searchBtn {
       @include m.iconStyles($button-size, $button-size, '/svgs/search.svg');
@@ -37,4 +54,8 @@ $title-width: 220px;
       @include m.iconStyles($button-size, $button-size, '/svgs/login.svg');
     }
   }
+}
+
+.scrollDown {
+  height: 80px;
 }
