refactor : content play page - 상단 진행 바 추가   - 총 질문 개수만큼 도트 버튼 생성, 도트 버튼 클릭 시, 원하는 문제로 이동 가능   - 대답 점수가 비어있을 경우, 제일 빠른 index로 이동 - 이전 버튼 추가

--- a/apps/web/components/Buttons/index.module.scss
+++ b/apps/web/components/Buttons/index.module.scss
@@ -8,19 +8,27 @@
     left: calc(50% - 185px);
   }
 }
+
 @media (max-width: 390px) {
   .right {
     right: 25px;
   }
-
   .left {
     left: 25px;
   }
 }
 
-.buttonWrap {
+.pink {
   background-color: var(--color-bg-pink);
+}
+.yellow {
+  background-color: var(--color-bg-yellow);
+}
+.blue {
+  background-color: var(--color-bg-blue);
+}
 
+.buttonWrap {
   p {
     padding: 5px;
     font-weight: var(--font-weight-bold);
