--- a/apps/web/containers/ContentResult/index.module.scss
+++ b/apps/web/containers/ContentResult/index.module.scss
@@ -1,6 +1,7 @@
 @use 'styles/mixins' as m;
 
 .wrap {
-  @include m.flexboxColumn(_, _);
-  gap: 20px;
+  width: 100%;
+  @include m.flexboxColumn();
+  gap: 30px;
 }
