--- a/apps/web/styles/_globals.scss
+++ b/apps/web/styles/_globals.scss
@@ -24,3 +24,16 @@
   white-space: pre-line;
   font-size: 0.9rem;
 }
+
+.yellow {
+  background-color: var(--color-bg-yellow);
+}
+.pink {
+  background-color: var(--color-bg-pink);
+}
+.blue {
+  background-color: var(--color-bg-blue);
+}
+.green {
+  background-color: var(--color-bg-green);
+}
