--- a/apps/web/styles/variable.css
+++ b/apps/web/styles/variable.css
@@ -18,9 +18,12 @@
 
   --color-bg: #f6f6f6;
   --color-bg-primary: #f3e6d9;
+
   --color-bg-pink: #fbd8c6;
   --color-bg-yellow: #ffda9a;
-  --color-bg-blue: #84a5df;
+  --color-bg-blue: #90b2e8;
+  --color-bg-green: #96e6b4;
+
 
   --color-primary: #eec7a6;
   --color-subPoint: #ffc690;
