--- a/apps/web/components/WindowStyles/index.module.scss
+++ b/apps/web/components/WindowStyles/index.module.scss
@@ -1,18 +1,26 @@
 @use 'styles/mixins' as m;
 
 .wrap {
+  width: 100%;
   @include m.borderStyles();
   box-shadow: 3px 4px var(--border-color);
 
   .titleBar {
     border-bottom: 2px solid var(--border-color);
-    background-color: var(--color-bg-yellow);
+
     padding: 2px 10px;
 
     @include m.flexbox(between, end);
 
-    h3 {
-      font-size: var(--font-size-m);
+    .title {
+      @include m.flexbox(between, end);
+      gap: 7px;
+      h3 {
+        font-size: var(--font-size-m);
+      }
+      p {
+        font-size: var(--font-size-s);
+      }
     }
 
     .barBtn {
@@ -27,9 +35,10 @@
       }
     }
   }
+
   .clientArea {
+    width: 100%;
     @include m.flexboxWrap($gap: 20px);
     padding: 10px;
-    width: 100%;
   }
 }
