--- a/apps/web/styles/_base.module.scss
+++ b/apps/web/styles/_base.module.scss
@@ -54,6 +54,7 @@ input {
   background-color: transparent;
   background-image: none !important;
   border: 0;
+  color: var(--font-color);
 }
 
 button {
