--- a/apps/web/containers/layout/Header/index.module.scss
+++ b/apps/web/containers/layout/Header/index.module.scss
@@ -26,6 +26,7 @@ $button-size: 1.2rem;
     .logo {
       .imageWrap {
         margin-top: -5px;
+        margin-left: 10px;
         position: relative;
         transition: all 0.5s ease;
       }
