style : kakao login page

--- a/apps/web/containers/Login/KakaoLogin/index.module.scss
+++ b/apps/web/containers/Login/KakaoLogin/index.module.scss
@@ -3,5 +3,17 @@
 .wrap {
   width: 100%;
   height: 500px;
-  @include m.flexbox();
+  @include m.flexboxColumn();
+
+  gap: 60px;
+
+  .imageBox {
+    @include m.flexboxColumn();
+    gap: 10px;
+
+    p {
+      font-size: var(--font-size-s);
+      color: var(--color-gray-9);
+    }
+  }
 }
