--- a/apps/web/containers/layout/SideNavBar/index.module.scss
+++ b/apps/web/containers/layout/SideNavBar/index.module.scss
@@ -73,7 +73,7 @@
 
         a {
           width: 100%;
-          font-size: var(--font-size-l);
+          font-size: var(--font-size-m);
           text-align: center;
         }
       }
