style: comment, devInfo

--- a/apps/web/components/Comments/CommentList/index.module.scss
+++ b/apps/web/components/Comments/CommentList/index.module.scss
@@ -16,7 +16,7 @@
   background-color: #eaf5ff;
 }
 .yellow {
-  background-color: #fff8ea;
+  background-color: var(--color-bg-ivory);
 }
 
 .commentBox {
