--- a/apps/web/styles/variable.css
+++ b/apps/web/styles/variable.css
@@ -23,6 +23,7 @@
   --color-bg-yellow: #ffda9a;
   --color-bg-blue: #90b2e8;
   --color-bg-green: #96e6b4;
+  --color-bg-ivory: #f8f0e2;
 
 
   --color-primary: #eec7a6;
