--- a/apps/web/styles/_globals.scss
+++ b/apps/web/styles/_globals.scss
@@ -28,6 +28,9 @@
 .yellow {
   background-color: var(--color-bg-yellow);
 }
+.deepPink {
+  background-color: var(--color-bg-deep-pink);
+}
 .pink {
   background-color: var(--color-bg-pink);
 }
