--- a/apps/web/styles/variable.css
+++ b/apps/web/styles/variable.css
@@ -19,6 +19,7 @@
   --color-bg: #f6f6f6;
   --color-bg-primary: #f3e6d9;
 
+  --color-bg-deep-pink: #ff8c72;
   --color-bg-pink: #fbd8c6;
   --color-bg-yellow: #ffda9a;
   --color-bg-blue: #90b2e8;
