--- a/apps/web/containers/Register/index.module.scss
+++ b/apps/web/containers/Register/index.module.scss
@@ -34,7 +34,7 @@
     input {
       width: 75%;
       padding: 5px;
-      font-size: var(--font-size-m);
+      font-size: var(--font-size-s);
       @include m.borderStyles($radius_size: --border-radius-xs);
     }
 
@@ -136,5 +136,14 @@
     height: 25px;
     font-size: var(--font-size-xs);
     border-radius: 1rem;
+  }
+
+  .resultH3 {
+    width: 100%;
+    padding: 3px;
+    text-align: center;
+    margin-top: 10px;
+    background-color: var(--color-bg-ivory);
+    border-radius: var(--border-radius-s);
   }
 }
