--- a/apps/web/components/Buttons/Button/index.module.scss
+++ b/apps/web/components/Buttons/Button/index.module.scss
@@ -20,11 +20,12 @@
 
 .buttonWrap {
   p {
-    padding: 5px;
+    padding: 8px;
     font-weight: var(--font-weight-bold);
     transition: border-color 0.3s ease;
     border-radius: var(--border-radius-s);
     border: 1.5px dashed transparent;
+
   }
 
   &:hover {
@@ -41,13 +42,13 @@
 }
 .medium {
   width: 40%;
-  padding: 3px;
+  padding: 5px;
   font-size: 0.9rem;
 }
 .large {
   width: 100%;
-  height: 50px;
-  padding: 5px;
+  line-height: 1.5;
+  padding: 8px;
   font-size: var(--font-size-m);
 }
 
