style: Items component 테두리 삭제, 패딩 수정

--- a/apps/web/components/Items/ImageItem/index.module.scss
+++ b/apps/web/components/Items/ImageItem/index.module.scss
@@ -16,7 +16,7 @@
 }
 
 .square {
-  @include m.borderStyles();
+  border-radius: 1rem;
 }
 .circle {
   @include m.borderStyles($radius_size: --border-radius-circle);
