--- a/apps/web/components/Items/ContentItem/index.module.scss
+++ b/apps/web/components/Items/ContentItem/index.module.scss
@@ -14,7 +14,7 @@ $icon-size: 0.8rem;
     overflow: hidden;
 
     @include m.flexboxColumn();
-    @include m.borderStyles();
+    border-radius: 1rem;
     margin-bottom: 3px;
 
     .image {
@@ -25,11 +25,11 @@ $icon-size: 0.8rem;
 
   .contentBox {
     @include m.flexbox(between, end);
-    gap: 0.8rem;
-    padding: 0 15px;
+    gap: 1rem;
+    padding: 3px 10px;
 
     .title {
-    font-size: var(--font-size-m);
+      font-size: var(--font-size-m);
       @include m.textEllipsis();
       font-weight: var(--font-weight-bold);
     }
