--- a/apps/web/containers/ContentContainers/Preview/index.module.scss
+++ b/apps/web/containers/ContentContainers/Preview/index.module.scss
@@ -8,17 +8,18 @@
   .contentWrap {
     width: 100%;
     @include m.flexboxColumn();
-    gap: 20px;
+    gap: 30px;
 
     h3 {
       text-align: center;
-      @include m.textEllipsis();
+      font-size: var(--font-size-xl);
     }
+
     .contentText {
-      @include m.textEllipsis();
-      padding: 0 10px;
       text-align: center;
       white-space: pre-wrap;
+      word-break: keep-all;
+      padding: 10px;
     }
 
     .playBtnWrap {
