--- a/apps/web/containers/ContentResult/index.module.scss
+++ b/apps/web/containers/ContentResult/index.module.scss
@@ -4,4 +4,23 @@
   width: 100%;
   @include m.flexboxColumn();
   gap: 30px;
+
+  h3 {
+    text-align: center;
+    font-size: var(--font-size-xl);
+  }
+
+  .content {
+    width: 90%;
+    border: 1.5px dashed var(--color-gray-a);
+    border-radius: 1rem;
+
+    white-space: pre-wrap;
+    word-break: keep-all;
+    line-height: 1.7;
+
+    .contentText {
+      padding: 15px;
+    }
+  }
 }
