--- a/apps/web/containers/Home/index.module.scss
+++ b/apps/web/containers/Home/index.module.scss
@@ -2,24 +2,24 @@
 
 .wrap {
   @include m.flexboxColumn(_, between);
-  gap: 30px;
+  gap: 40px;
 
   .btnBox {
     width: 100%;
-    @include m.flexbox(end, around);
-    gap: 10px;
+    @include m.flexbox(around);
   }
 
-  .clientArea {
-    @include m.flexbox();
-    width: 100%;
+  .contents {
+    @include m.flexboxColumn(_, between);
+    gap: 20px;
+    .clientArea {
+      @include m.flexbox();
+    }
   }
 
   .bannerWrap {
     width: 100%;
     height: 100%;
-    --swiper-pagination-bullet-inactive-color: var(--color-bg-yellow);
-    --swiper-pagination-bullet-inactive-opacity: 0.5;
     --swiper-pagination-bullet-size: 10px;
     --swiper-pagination-bullet-horizontal-gap: 6px;
     --swiper-pagination-color: var(--color-bg-green);
@@ -32,7 +32,7 @@
   border-radius: 0.3rem;
   position: absolute;
   top: 118px;
-  right: 15px;
+  left: 15px;
   z-index: 60;
 
   background: linear-gradient(to bottom right, var(--color-bg-green), var(--color-bg-blue) 65%);
@@ -47,13 +47,13 @@
 
   .speechBubblePoint {
     position: absolute;
-    bottom: -10px;
-    right: 15px;
+    bottom: -8px;
+    left: 15px;
 
     width: 0;
     height: 0;
     border-top: 10px solid var(--color-bg-blue);
-    border-left: 2px solid transparent;
-    border-right: 10px solid transparent;
+    border-right: 2px solid transparent;
+    border-left: 10px solid transparent;
   }
 }
