--- a/apps/web/containers/layout/Header/index.module.scss
+++ b/apps/web/containers/layout/Header/index.module.scss
@@ -8,6 +8,8 @@ $button-size: 1.2rem;
   width: 100%;
   height: 120px;
 
+  position: relative;
+
   background: linear-gradient(to bottom, var(--color-bg-pink) 50%, transparent);
   transition: height 0.5s ease;
 
@@ -26,7 +28,6 @@ $button-size: 1.2rem;
     .logo {
       .imageWrap {
         margin-top: -5px;
-        margin-left: 10px;
         position: relative;
         transition: all 0.5s ease;
       }
@@ -34,16 +35,20 @@ $button-size: 1.2rem;
       .scrollupLogo {
         width: 220px;
         height: 100px;
+        position: absolute;
+        left: calc(50% - 100px);
       }
       .scrollDownLogo {
         width: 140px;
         height: 60px;
+        position: absolute;
+        left: calc(50% - 60px);
       }
     }
 
     .btnBox {
-      width: 55px;
       @include m.flexbox(between);
+      gap: 20px;
     }
     .searchBtn {
       @include m.iconStyles($button-size, $button-size, '/svgs/search.svg');
