refactor: footer span 높이 조절 및 폰트 컬러 적용

--- a/apps/web/containers/layout/Footer/index.module.scss
+++ b/apps/web/containers/layout/Footer/index.module.scss
@@ -10,7 +10,7 @@ $icon-size: 1rem;
 
   p {
     font-size: var(--font-size-s);
-    color: var(--color-font);
+    color: var(--font-color);
   }
 
   .contentsBox {
@@ -36,8 +36,9 @@ $icon-size: 1rem;
       gap: 8px;
 
       span {
-        color: var(--color-font);
+        color: var(--font-color);
         font-size: var(--font-size-xs);
+        margin-top: -2px;
       }
     }
   }
