refactor: 이미지 변경 및 폰트크기 조절 - 이미지 깨짐 개선 - 오타 수정

--- a/apps/web/containers/About/index.module.scss
+++ b/apps/web/containers/About/index.module.scss
@@ -2,7 +2,6 @@
 
 .wrap {
   text-align: center;
-
   padding: 20px;
 
   .contentWrap {
@@ -19,7 +18,8 @@
 
     h2 {
       width: 100%;
-      font-size: var(--font-size-l);
+      font-size: 1.1rem;
+      padding: 2px;
       border-radius: var(--border-radius-m);
       background-color: var(--color-bg-yellow);
     }
@@ -29,6 +29,9 @@
       margin: 8px;
       line-height: 1.7;
     }
+  }
+  .contentBox {
+    width: 100%;
   }
 
   .iconBox {
