refactor: items 그림자 효과 추가

--- a/apps/web/styles/_globals.scss
+++ b/apps/web/styles/_globals.scss
@@ -17,7 +17,7 @@
 }
 
 .back_shadow {
-  box-shadow: 0 4px 8px rgba(85, 85, 85, 0.1);
+  box-shadow: 4px 4px 8px rgba(85, 85, 85, 0.1);
 }
 .yellow {
   background-color: var(--color-bg-yellow);
